Quick fix for overlapping exhibit title and share buttons

--- a/scss/theme/_index.scss
+++ b/scss/theme/_index.scss
@@ -115,6 +115,7 @@ h1 {
 #exhibit-title {
   margin: $margin-md 0 $margin-md -1px;
   min-height: 0;
+  max-width: 80%;
 }
 
 h2 {
